--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,3 +68,19 @@ stages:
           buildType: 'current'
           artifactName: 'drop'
           targetPath: '$(System.ArtifactsDirectory)'
+      - task: AzureResourceManagerTemplateDeployment@3
+        inputs:
+          deploymentScope: 'Resource Group'
+          azureResourceManagerConnection: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+          subscriptionId: '6a92d24c-701c-4ec5-8af0-7981e6537707'
+          action: 'Create Or Update Resource Group'
+          resourceGroupName: 'PartsUnlimitedRG'
+          location: 'East US'
+          templateLocation: 'Linked artifact'
+          csmFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.json'
+          csmParametersFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.param.json'
+          overrideParameters: |
+            WebsiteName $(WebsiteName) -PUL_ServerName
+            $(ServerName) -PUL_DBPassword $(AdminPassword) -PUL_DBPasswordForTest
+            $(AdminTestPassword) -PUL_HostingPlanName $(HostingPlan)
+          deploymentMode: 'Incremental'
