--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,10 @@ stages:
       solution: '**/*.sln'
       buildPlatform: 'Any CPU'
       buildConfiguration: 'Release'
+      # ResourceGroupName: 'PartsUnlimitedRG'
+      # WebsiteName: 'pule2e0da0d460'
+      # ServerName: 'pule2e0da0d460'
+      # HostingPlan: 'pule2e'
 
     steps:
     - task: NuGetToolInstaller@1
@@ -82,7 +86,23 @@ stages:
         csmFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.json'
         csmParametersFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.param.json'
         overrideParameters: |
-          WebsiteName $(WebsiteName) -PUL_ServerName
+          -WebsiteName $(WebsiteName) -PUL_ServerName
           $(ServerName) -PUL_DBPassword $(AdminPassword) -PUL_DBPasswordForTest
           $(AdminTestPassword) -PUL_HostingPlanName $(HostingPlan)
         deploymentMode: 'Incremental'
+#   variables:
+#   ResourceGroupName: 'ASPDOTNET'
+#   WebsiteName: 'pule2e0da0d460'
+#   ServerName: 'pule2e0da0d460'
+#   HostingPlan: 'pule2e'
+
+# steps:
+# - task: AzureResourceGroupDeployment@2
+#   displayName: 'Azure Deployment'
+#   inputs:
+#     azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+#     resourceGroupName: '$(ResourceGroupName)'
+#     location: 'West US'
+#     csmFile: '$(System.DefaultWorkingDirectory)/PartsUnlimitedE2E/drop/PartsUnlimited-aspnet45/env/PartsUnlimitedEnv/Templates/FullEnvironmentSetupMerged.json'
+#     csmParametersFile: '$(System.DefaultWorkingDirectory)/PartsUnlimitedE2E/drop/PartsUnlimited-aspnet45/env/PartsUnlimitedEnv/Templates/FullEnvironmentSetupMerged.param.json'
+#     overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(ServerName)  -PUL_HostingPlanName $(HostingPlan)'    
