Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,7 +88,7 @@ stages:
         overrideParameters: |
           -WebsiteName $(WebsiteName) -PUL_ServerName
           $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
-          $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(HostingPlan)
+          $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
         deploymentMode: 'Incremental'
 #   variables:
 #   ResourceGroupName: 'ASPDOTNET'
