--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,10 +85,11 @@ stages:
         templateLocation: 'Linked artifact'
         csmFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.json'
         csmParametersFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.param.json'
-        overrideParameters: |
-          -WebsiteName $(WebsiteName) -PUL_ServerName
-          $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
-          $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
+        overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)' 
+        # overrideParameters: |
+        #   -WebsiteName $(WebsiteName) -PUL_ServerName
+        #   $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
+        #   $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
         deploymentMode: 'Incremental'
 #   variables:
 #   ResourceGroupName: 'ASPDOTNET'
