--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,6 +73,7 @@ stages:
         buildType: 'current'
         artifactName: 'drop'
         targetPath: '$(System.ArtifactsDirectory)'
+
     - task: AzureResourceManagerTemplateDeployment@3
       displayName: Deploy Resource Group 
       inputs:
@@ -91,19 +92,14 @@ stages:
         #   $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
         #   $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
         deploymentMode: 'Incremental'
-#   variables:
-#   ResourceGroupName: 'ASPDOTNET'
-#   WebsiteName: 'pule2e0da0d460'
-#   ServerName: 'pule2e0da0d460'
-#   HostingPlan: 'pule2e'
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+        appType: 'webApp'
+        WebAppName: '$(WebsiteName)'
+        packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
 
-# steps:
-# - task: AzureResourceGroupDeployment@2
-#   displayName: 'Azure Deployment'
-#   inputs:
-#     azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
-#     resourceGroupName: '$(ResourceGroupName)'
-#     location: 'West US'
-#     csmFile: '$(System.DefaultWorkingDirectory)/PartsUnlimitedE2E/drop/PartsUnlimited-aspnet45/env/PartsUnlimitedEnv/Templates/FullEnvironmentSetupMerged.json'
-#     csmParametersFile: '$(System.DefaultWorkingDirectory)/PartsUnlimitedE2E/drop/PartsUnlimited-aspnet45/env/PartsUnlimitedEnv/Templates/FullEnvironmentSetupMerged.param.json'
-#     overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(ServerName)  -PUL_HostingPlanName $(HostingPlan)'    
+
+
+
