Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,12 +52,12 @@ stages:
     - task: CopyFiles@2
       displayName: 'Copy Files'
       inputs:
-        SourceFolder: '$(build.sourcesdirectory)/PartsUnlimited-aspnet45/env/'
+        SourceFolder: '$(build.sourcesdirectory)'
         Contents: '**/*.json'
         TargetFolder: '$(build.artifactstagingdirectory)'    
     - task: PublishPipelineArtifact@1
       inputs:
-        targetPath: '$(Build.ArtifactStagingDirectory)'
+        targetPath: '$(build.artifactstagingdirectory)'
         artifact: 'drop'
         publishLocation: 'pipeline'
 - stage: Deploy
