Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,10 +40,17 @@ stages:
     #     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
     #     platform: '$(buildPlatform)'
     #     configuration: '$(buildConfiguration)'
+    # - task: VSBuild@1
+    #   inputs:
+    #     solution: '**/*.csproj'
+    #     enabled: true
     - task: VSBuild@1
+      displayName: 'Build solution'
       inputs:
-        solution: '**/*.csproj'
-        enabled: true
+        vsVersion: latest
+        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.stagingDirectory)" /p:IncludeServerNameInBuildInfo=True /p:GenerateBuildInfoConfigFile=true /p:BuildSymbolStorePath="$(SymbolPath)" /p:ReferencePath="C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\Extensions\Microsoft\Pex"'
+        platform: '$(BuildPlatform)'
+        configuration: '$(BuildConfiguration)'
 
     - task: VSTest@2
       inputs:
