--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,11 +37,8 @@ stages:
       displayName: 'NuGet restore'
       inputs:
         solution: '**\*.sln'    
-    - task: VSBuild@1
-      inputs:
-        solution: '**\*.sln'
-        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true''
-        
+    
+    
 
     # - task: VSBuild@1
     #   inputs:
@@ -67,6 +64,10 @@ stages:
     #     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.stagingDirectory)" /p:IncludeServerNameInBuildInfo=True /p:GenerateBuildInfoConfigFile=true /p:BuildSymbolStorePath="$(SymbolPath)" /p:ReferencePath="C:\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\Extensions\Microsoft\Pex"'
     #     platform: '$(BuildPlatform)'
     #     configuration: '$(BuildConfiguration)'
+    - task: VSBuild@1
+      inputs:
+        solution: '**\*.sln'
+        msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.stagingDirectory)" /p:IncludeServerNameInBuildInfo=True /p:GenerateBuildInfoConfigFile=true /p:BuildSymbolStorePath="$(SymbolPath)"'
 
     - task: VSTest@2
       inputs:
