Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ stages:
   - job: Build
 
     pool:
-      vmImage: 'windows-latest'
+      vmImage: 'ubuntu-20.04'
       demands:
       - msbuild
       - visualstudio
