--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,7 +90,8 @@ stages:
         azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
         appType: 'webApp'
         WebAppName: '$(WebsiteName)'
-        packageForLinux: '$(System.ArtifactsDirectory)*.zip'    
+        packageForLinux: '$(build.artifactstagingdirectory)*.zip'    
+        
         
 
 
