--- a/MultiStageYMLApproval.YML
+++ b/MultiStageYMLApproval.YML
@@ -48,14 +48,12 @@ stages:
         targetPath: '$(build.artifactstagingdirectory)'
         artifact: 'drop'
         publishLocation: 'pipeline'
-        
 - stage: DeployAzureResources
   jobs:
   - job: DeployARMTemplate        
   pool:
-    name: Hosted VS2017
-  steps:  
-  
+      name: Hosted VS2017
+  steps:        
   - task: DownloadPipelineArtifact@2
     displayName: Download Build Artifacts
     inputs:
@@ -88,5 +86,49 @@ stages:
       WebAppName: '$(WebsiteName)'
       packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
 
+- stage : DeployAzureResources
+  jobs: 
+  - job: DeployARMTemplate
+    pool:
+      name: Hosted VS2017
+    steps:        
+    - task: DownloadPipelineArtifact@2
+      displayName: Download Build Artifacts
+      inputs:
+        buildType: 'current'
+        artifactName: 'drop'
+        targetPath: '$(System.ArtifactsDirectory)'
 
-  
+    - task: AzureResourceManagerTemplateDeployment@3
+      displayName: Deploy Resource Group 
+      inputs:
+        deploymentScope: 'Resource Group'
+        azureResourceManagerConnection: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+        subscriptionId: '6a92d24c-701c-4ec5-8af0-7981e6537707'
+        action: 'Create Or Update Resource Group'
+        resourceGroupName: '$(RgName)'
+        location: 'East US'
+        templateLocation: 'Linked artifact'
+        csmFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.json'
+        csmParametersFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.param.json'
+        overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)' 
+        # overrideParameters: |
+        #   -WebsiteName $(WebsiteName) -PUL_ServerName
+        #   $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
+        #   $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
+        deploymentMode: 'Incremental'
+    - task: AzureRmWebAppDeployment@4
+      inputs:
+        ConnectionType: 'AzureRM'
+        azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+        appType: 'webApp'
+        WebAppName: '$(WebsiteName)'
+        packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
+
+
+        
+        
+
+
+
+
