--- a/MultiStageYMLApproval.YML
+++ b/MultiStageYMLApproval.YML
@@ -119,7 +119,7 @@ stages:
         #   $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
         #   $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)
         deploymentMode: 'Incremental'
-        
+
 - stage: DeployToDevAndStaging
   displayName: Deploy to Dev and Staging Environments
   jobs:
@@ -127,13 +127,46 @@ stages:
     displayName: Deploy To Dev Environment
     pool:
       name: Hosted VS2017
-    - task: AzureRmWebAppDeployment@4
-      inputs:
-        ConnectionType: 'AzureRM'
-        azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
-        appType: 'webApp'
-        WebAppName: '$(WebsiteName)'
-        packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
+    environment: 'PUL-Dev'
+    strategy:
+        runOnce:
+           deploy:
+               steps:
+               - task: AzureRmWebAppDeployment@4
+                 inputs:
+                  ConnectionType: 'AzureRM'
+                  azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+                  appType: 'webApp'
+                  WebAppName: '$(WebsiteName)'
+                  deployToSlotOrASE: true
+                  ResourceGroupName: 'PartsUnlimitedRG'
+                  SlotName: 'Dev'
+                  packageForLinux: '$(Pipeline.Workspace)/**/*.zip'    
+                  #packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
+  - deployment: DeployToStaging
+    displayName: Deploy To Stage Environment
+    dependsOn: DeployToDev
+    pool:
+      name: Hosted VS2017
+    environment: 'PUL-Staging'
+    strategy:
+        runOnce:
+           deploy:
+               steps:
+               - task: AzureRmWebAppDeployment@4
+                 inputs:
+                  ConnectionType: 'AzureRM'
+                  azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+                  appType: 'webApp'
+                  WebAppName: '$(WebsiteName)'
+                  deployToSlotOrASE: true
+                  ResourceGroupName: 'PartsUnlimitedRG'
+                  SlotName: 'Staging'
+                  packageForLinux: '$(Pipeline.Workspace)/**/*.zip'    
+                  #packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'                    
+
+
+    
 
 - stage: DeployToProd
   displayName: Deploy to Production
