--- a/MultiStageYMLApproval.YML
+++ b/MultiStageYMLApproval.YML
@@ -163,10 +163,7 @@ stages:
                   ResourceGroupName: 'PartsUnlimitedRG'
                   SlotName: 'Staging'
                   packageForLinux: '$(Pipeline.Workspace)/**/*.zip'    
-                  #packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'                    
-
-
-    
+                  #packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'                        
 
 - stage: DeployToProd
   displayName: Deploy to Production
@@ -175,11 +172,21 @@ stages:
     displayName: Deploy To Prod Environment
   pool:
     name: Hosted VS2017        
-
-
-        
-        
-
-
-
-
+  environment: 'PUL-Production'
+    strategy:
+        runOnce:
+           deploy:
+               steps:
+               - task: AzureRmWebAppDeployment@4
+                 inputs:
+                  ConnectionType: 'AzureRM'
+                  azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
+                  appType: 'webApp'
+                  WebAppName: '$(WebsiteName)'
+                  deployToSlotOrASE: true
+                  ResourceGroupName: 'PartsUnlimitedRG'
+                  SlotName: 'Staging'
+                  packageForLinux: '$(Pipeline.Workspace)/**/*.zip'    
+                  #packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'                    
+  
+  
