--- a/MultiStageYMLApproval.YML
+++ b/MultiStageYMLApproval.YML
@@ -173,7 +173,7 @@ stages:
     displayName: Deploy To Production Environment
     pool:
       name: Hosted VS2017
-    environment: 'PUL-production'
+    environment: 'PUL-Production'
     strategy:
         runOnce:
            deploy:
