Update SecretManagement.yml for Azure Pipelines

--- a/SecretManagement.yml
+++ b/SecretManagement.yml
@@ -59,6 +59,12 @@ stages:
         buildType: 'current'
         artifactName: 'drop'
         targetPath: '$(System.ArtifactsDirectory)'
+    - task: AzureKeyVault@2
+      inputs:
+        azureSubscription: 'serviceprincipal-connection'
+        KeyVaultName: 'partsdbkv'
+        SecretsFilter: '*'
+        RunAsPreJob: false    
 
     - task: AzureResourceManagerTemplateDeployment@3
       displayName: Deploy Resource Group 
