--- a/SecretManagement.yml
+++ b/SecretManagement.yml
@@ -78,7 +78,7 @@ stages:
         templateLocation: 'Linked artifact'
         csmFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.json'
         csmParametersFile: '$(System.ArtifactsDirectory)/**/FullEnvironmentSetupMerged.param.json'
-        overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)' 
+        overrideParameters: '-WebsiteName $(WebsiteName) -PUL_ServerName $(PUL_ServerName) -PUL_DBPassword $(AdminPassword) -PUL_DBPasswordForTest $(PUL_DBPasswordForTest) -PUL_HostingPlanName $(PUL_HostingPlanName)' 
         # overrideParameters: |
         #   -WebsiteName $(WebsiteName) -PUL_ServerName
         #   $(PUL_ServerName) -PUL_DBPassword $(PUL_DBPassword) -PUL_DBPasswordForTest
