--- a/stage-template.yml
+++ b/stage-template.yml
@@ -3,22 +3,28 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger:
-- master
-
+trigger: none
+#- master
+parameters:
+  - name: workloadName
+    displayName: Target Workload Name 
+    type: string
+    default: 'workload-prod-fa'
 
 stages:
 - stage: Deploy Workload 
   displayName: Deploy to Dev and Staging Environments
+  dependsOn: build
+  condition: succeeded
   jobs:
   - deployment: 
-    displayName: Deploy Workload 
+    displayName: Deploy ${{parameters:workloadName}} 
     pool:
       name: ubuntu-latest 
-    environment: 'PUL-Dev'
+    environment: 'production'
     strategy:
         runOnce:
            deploy:
                steps:
-               - bash: echo "Deploy to Dev and Staging Environments"
+               - bash: echo "Deploy to ${{parameters:workloadName}} to production"
   
