--- a/pipelinewithtemplates.yml
+++ b/pipelinewithtemplates.yml
@@ -21,7 +21,7 @@ stages:
     workloadName: 'workload-prod-fa'
 
 - stage: configure
-  dependson: deploy
+  dependson: DeployWorkload
   jobs:
   - job: deploy_staging   
     pool:
