--- a/pipelinewithtemplates.yml
+++ b/pipelinewithtemplates.yml
@@ -22,7 +22,7 @@ stages:
     workloadName: 'workload-prod-fa'
 
 - stage: configure
-  dependson: DeployWorkload
+  dependson: Deploy
   jobs:
   - job: deploy_staging   
     pool:
