--- a/pipelinewithtemplates.yml
+++ b/pipelinewithtemplates.yml
@@ -1,8 +1,8 @@
 trigger:
   batch: true
   branches:
-    include: 
-      - 'master'
+    include: none
+      #- 'master'
   paths:
     exclude:
       - README.md  
