--- a/pipelines/stage_templates/deployworkload.yml
+++ b/pipelines/stage_templates/deployworkload.yml
@@ -14,7 +14,7 @@ stages:
 - stage: DeployWorkload 
   displayName: Deploy to Dev and Staging Environments
   dependsOn: build
-  condition: succeeded
+  condition: succeeded()
   jobs:
   - deployment: 
     displayName: Deploy ${{ parameters.workloadName }} 
