--- a/pipelinewithtemplates.yml
+++ b/pipelinewithtemplates.yml
@@ -26,7 +26,7 @@ stages:
   jobs:
   - job: deploy_staging   
     pool:
-      vmImage: 'ubintu-latest'
+      vmImage: 'ubuntu-latest'
     steps:
     - script: echo "Configure"  
 
