--- a/pipelinewithtemplates.yml
+++ b/pipelinewithtemplates.yml
@@ -26,7 +26,7 @@ stages:
   jobs:
   - job: deploy_staging   
     pool: 
-      vmImage: ubuntu-latest
+      vmImage: Hosted VS2017
     steps:
     - script: echo "Configure"  
 
