--- a/pipelines/job_templates/build.yml
+++ b/pipelines/job_templates/build.yml
@@ -15,7 +15,7 @@ parameters:
 jobs:
 - job: run_build
   pool: 
-    vmImage: Hosted VS2017
+    name: Hosted VS2017
   steps:
   - ${{ parameters.preBuildSteps }}  
   - bash: echo "Build with ${{ parameters.buildConfigurations }}"
