--- a/appweb-monitoring.yml
+++ b/appweb-monitoring.yml
@@ -66,7 +66,7 @@ stages:
         ConnectionType: 'AzureRM'
         azureSubscription: 'ES-CE-LR-INT REQUESTORALIAS (6a92d24c-701c-4ec5-8af0-7981e6537707)'
         appType: 'webApp'
-        WebAppName: '$(WebsiteName)'
+        WebAppName: 'partsunlimitedappweb'
         packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'    
 
 
