--- a/PartsUnlimited-aspnet45/src/PartsUnlimitedWebsite/Web.config
+++ b/PartsUnlimited-aspnet45/src/PartsUnlimitedWebsite/Web.config
@@ -18,10 +18,10 @@
     <add key="Authentication.Twitter.Secret" value=""/>
     <add key="MachineLearning.ModelName" value="sampletest"/>
     <add key="MachineLearning.AccountKey" value=""/>
-    <add key="Keys:ApplicationInsights:InstrumentationKey" value="2567befa-56c8-4b9e-bcdf-6764828f1cac"/>
+    <add key="Keys:ApplicationInsights:InstrumentationKey" value="40369131-21e5-47af-977b-041be4b0e2f8"/>
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnectionString" connectionString="Server=(localdb)\mssqllocaldb;Database=PartsUnlimitedWebsite;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnectionString" connectionString="Server=tcp:webapp-monitoring-demo-server.database.windows.net,1433;Initial Catalog=webapp-monitoring-demo-database;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
